[gd_scene load_steps=11 format=3 uid="uid://cv5mlbkvttptu"]

[ext_resource type="Script" uid="uid://bbt787xux0x5a" path="res://globalSkillData/fire.gd" id="1_r81u2"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_s8btr"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_6l2cn"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g8o15"]
gradient = SubResource("Gradient_6l2cn")
width = 8
height = 8
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_n6vun"]
offsets = PackedFloat32Array(0, 0.24110672, 0.51778656, 0.8063241, 1)
colors = PackedColorArray(1.353256, 0.86643213, 0, 1, 2.454227, 0.6261125, 0, 1, 3.2944162, 0, 0, 1, 3.2944162, 0, 0, 1, 0, 0, 0, 0.15686275)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_iyaln"]
gradient = SubResource("Gradient_n6vun")

[sub_resource type="Curve" id="Curve_d141p"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.3), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_e3ktm"]
curve = SubResource("Curve_d141p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w5slj"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(30, 5, 1)
angle_min = -179.99998
angle_max = 180.00002
direction = Vector3(0, -1, 0)
spread = 50.0
initial_velocity_min = 30.0
initial_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
damping_max = 10.0
scale_curve = SubResource("CurveTexture_e3ktm")
color_ramp = SubResource("GradientTexture1D_iyaln")
turbulence_enabled = true
turbulence_noise_strength = 4.0
turbulence_noise_scale = 5.0
turbulence_noise_speed = Vector3(1, 0, 0)
turbulence_noise_speed_random = 1.0
turbulence_influence_min = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r81u2"]
size = Vector2(60, 20)

[node name="Fire" type="Node2D"]
script = ExtResource("1_r81u2")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_s8btr")
amount = 250
amount_ratio = 0.0
texture = SubResource("GradientTexture2D_g8o15")
explosiveness = 0.1
process_material = SubResource("ParticleProcessMaterial_w5slj")

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_r81u2")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
